FEAT: userHistoryLocation, insertIntoJsonUsers, insertIntoJsonLocations. TODO: anteriors